@@ -2,9 +2,10 @@ package transportation.ratings.service;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import transportation.ratings.dto.RatingRequestDto;
+import transportation.ratings.dto.CreateRatingRequestDto;
 import transportation.ratings.dto.RatingResponseDto;
-import transportation.ratings.dto.RatingUpdateDto;
+import transportation.ratings.dto.UpdateRatingRequestDto;
+import transportation.ratings.dto.RestoreRatingRequestDto;
 import transportation.ratings.entity.AuthorType;
 import transportation.ratings.entity.Rating;
 import transportation.ratings.exception.RatingNotFoundException;
@@ -29,29 +30,26 @@ public class RatingServiceImpl implements RatingService {
     }
 
     @Override
-    public RatingResponseDto createRating(RatingRequestDto requestDto) {
-        if ((requestDto.getDriverId() == null || requestDto.getDriverId().trim().isEmpty()) &&
-                (requestDto.getPassengerId() == null || requestDto.getPassengerId().trim().isEmpty()) &&
-                requestDto.getAuthorType() == null) {
-        }
+    public RatingResponseDto createRating(CreateRatingRequestDto request) {
+        Rating rating = ratingMapper.toEntity(request);
 
-        Rating rating = ratingMapper.toEntity(requestDto);
-        Date now = new Date();
-        rating.setCreatedAt(now);
-        rating.setUpdatedAt(now);
-        rating.setDeleted(false);
-
-        if (requestDto.getAuthorType() != null) {
-            rating.setAuthorType(requestDto.getAuthorType());
-        } else if ((requestDto.getPassengerId() != null && !requestDto.getPassengerId().trim().isEmpty()) &&
-                (requestDto.getDriverId() == null || requestDto.getDriverId().trim().isEmpty())) {
+        if (request.authorType() != null) {
+            rating.setAuthorType(request.authorType());
+        } else if ((request.passengerId() != null && !request.passengerId().isBlank()) &&
+                (request.driverId() == null || request.driverId().isBlank())) {
             rating.setAuthorType(AuthorType.PASSENGER);
-        } else if ((requestDto.getDriverId() != null && !requestDto.getDriverId().trim().isEmpty()) &&
-                (requestDto.getPassengerId() == null || requestDto.getPassengerId().trim().isEmpty())) {
+        } else if ((request.driverId() != null && !request.driverId().isBlank()) &&
+                (request.passengerId() == null || request.passengerId().isBlank())) {
             rating.setAuthorType(AuthorType.DRIVER);
         } else {
             rating.setAuthorType(null);
         }
+
+        Date now = new Date();
+
+        rating.setCreatedAt(now);
+        rating.setUpdatedAt(now);
+        rating.setDeleted(false);
 
         Rating saved = ratingRepository.save(rating);
         return ratingMapper.toDto(saved);
@@ -59,10 +57,7 @@ public class RatingServiceImpl implements RatingService {
 
     @Override
     public RatingResponseDto getRatingById(String id) {
-        Rating rating = ratingRepository.findById(id)
-                .filter(r -> !r.isDeleted())
-                .orElseThrow(() -> new RatingNotFoundException("Rating not found with id: " + id));
-        return ratingMapper.toDto(rating);
+        return ratingMapper.toDto(findRatingByIdOrThrow(id));
     }
 
     @Override
@@ -83,27 +78,48 @@ public class RatingServiceImpl implements RatingService {
     }
 
     @Override
-    public RatingResponseDto updateRating(String id, RatingUpdateDto updateDto) {
-        Rating rating = ratingRepository.findById(id)
-                .filter(r -> !r.isDeleted())
-                .orElseThrow(() -> new RatingNotFoundException("Rating not found with id: " + id));
-
-        rating.setScore(updateDto.getScore());
-        rating.setComment(updateDto.getComment());
+    public RatingResponseDto updateRating(String id, UpdateRatingRequestDto updateDto) {
+        Rating rating = findRatingByIdOrThrow(id);
+        rating.setScore(updateDto.score());
+        rating.setComment(updateDto.comment());
         rating.setUpdatedAt(new Date());
-
         Rating updated = ratingRepository.save(rating);
         return ratingMapper.toDto(updated);
     }
 
     @Override
     public void deleteRating(String id) {
-        Rating rating = ratingRepository.findById(id)
-                .filter(r -> !r.isDeleted())
-                .orElseThrow(() -> new RatingNotFoundException("Rating not found with id: " + id));
-
+        Rating rating = findRatingByIdOrThrow(id);
         rating.setDeleted(true);
         rating.setUpdatedAt(new Date());
         ratingRepository.save(rating);
+    }
+
+    @Override
+    public RatingResponseDto restoreRating(RestoreRatingRequestDto request) {
+        Rating rating = ratingRepository.findById(request.id())
+                .orElseThrow(() -> new RatingNotFoundException("Rating with id " + request.id() + " not found"));
+
+        if (!rating.isDeleted()) {
+            throw new IllegalStateException("Rating with id " + request.id() + " is not deleted");
+        }
+
+        boolean exists = StreamSupport.stream(ratingRepository.findAll().spliterator(), false)
+                .anyMatch(r -> !r.isDeleted() && r.getId().equals(rating.getId()));
+
+        if (exists) {
+            throw new IllegalStateException("Another active rating with id " + rating.getId() + " already exists");
+        }
+
+        rating.setDeleted(false);
+        rating.setUpdatedAt(new Date());
+        Rating restored = ratingRepository.save(rating);
+        return ratingMapper.toDto(restored);
+    }
+
+    private Rating findRatingByIdOrThrow(String id) {
+        return ratingRepository.findById(id)
+                .filter(r -> !r.isDeleted())
+                .orElseThrow(() -> new RatingNotFoundException("Rating with id " + id + " not found"));
     }
 }
